Fixed #287 - fixed team page layout bug on safari... safari hates us

--- a/less/pages/team.less
+++ b/less/pages/team.less
@@ -12,8 +12,22 @@
   .image-container {
     text-align: center;
     @media screen and (min-width: 768px) {
+      width: 30%;
       text-align: left;
-      margin-right: 30px;
+      padding-right: 30px;
+    }
+    img {
+      width: 250px;
+      @media screen and (min-width: 768px) {
+        width: 100%;
+      }
+    }
+  }
+  .details {
+    text-align: center;
+    @media screen and (min-width: 768px) {
+      width: 70%;
+      text-align: left;
     }
   }
   h1 {
